# zexvro

./: .env.example  .gitignore  404.html  AGENTS.md  README.md  agent-convo.md  cli.md  context.md  continue.md  design.md  frontend_implementation_blueprint.md  memory.md  package.json  pages.md  plan.md  planning.md
services/nft-service/: .gitignore  Cargo.toml  README.md
services/nft-service/api/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
services/nft-service/api/src/: app.test.ts  app.ts  auth.test.ts  auth.ts  config.test.ts  config.ts  domain.ts  dynamoRepository.test.ts  dynamoRepository.ts  errors.ts  index.ts  localPinning.test.ts  localPinning.ts  mediaTypes.test.ts  mediaTypes.ts  pinning.test.ts  pinning.ts  repository.ts  s3Pinning.test.ts  s3Pinning.ts  server.ts  service.ts  stellarGateway.test.ts  stellarGateway.ts
services/nft-service/contracts/collection/: Cargo.toml
services/nft-service/contracts/collection/src/: lib.rs  test.rs
services/nft-service/contracts/collection/test_snapshots/test/: constructor_and_creator_mint_work.1.json  duplicate_token_is_rejected.1.json  failed_usdc_payment_does_not_mint_the_item.1.json  owner_can_delegate_minting.1.json  ownership_transfer_revokes_the_previous_owners_implicit_minter_role.1.json  purchase_transfers_usdc_and_mints_atomically.1.json  real_auth_is_required_for_creator_mint.1.json  transfers_and_burns_use_standard_nft_rules.1.json  (+1 more)
zer0-pool/contracts/zer0-pool/: Cargo.toml
zer0-pool/contracts/zer0-pool/src/: lib.rs
(+422 files in other folders)
