[workspace]
resolver = "2"
members = ["contracts/collection"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
